# videos_view

./: main.py  pyproject.toml
database/: connection.py
static/fontello/: config.json  demo.html
static/fontello/css/: videosview-codes.css  videosview-embedded.css  videosview-ie7-codes.css  videosview-ie7.css  videosview.css
static/fontello/font/: videosview.eot
templates/: base.html  login.html
