[tool.poetry]
name = "videos-view"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.14"
fastapi = "^0.108.0"
uvicorn = {extras = ["standart"], version = "^0.25.0"}
sqlalchemy = {extras = ["email"], version = "^2.0.25"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
